# will

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  tsconfig.json
.github/workflows/: rust-ci.yml
examples/: ifnet.rs  tree.rs
resources/server/: server_meta.json
src/: api.rs  endpoints.rs  file_manager.rs  files.rs  init.rs  main.rs  server.rs  setup.rs
src-front/: styles.css
src-front/components/: dir.html  file.html  main_menu.html  options_tab.html
src-front/js/: main.ts  root.ts
src-js/: fs_entry.html  index.html
src-js/js/: main.js  root.js  root.ts
src/file_explorer/: tree.rs
src/files/: rest.rs  tree.rs
src/js/: main.ts  root.ts
src/server/: file_system.rs  frontend.rs  request.rs  response.rs
