[package]
name = "homeward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
derive_str_enumify = { path = "../flora/derive_str_enumify" }

[build-dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
