[package]
name = "will_o_wisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/main.rs"
name = "will_o_wisp"

[[example]]
name = "tree"
path = "examples/tree.rs"

[[example]]
name = "ifnet"
path = "examples/ifnet.rs"
